// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TableScrollWrapper rendering renders expected elements 1`] = `
<div
  className="Table__wrapper vertical"
  id="test"
  tabIndex={0}
>
  body
</div>
`;

exports[`TableScrollWrapper rendering renders expected elements when optional properties are set 1`] = `
<div
  className="Table__wrapper both TestClass"
  id="test"
  tabIndex={0}
>
  body
</div>
`;
